--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,11 @@ main {
 .meme--text {
   position: absolute;
   width: 80%;
+
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   text-align: center;
   left: 50%;
   transform: translateX(-50%);
@@ -94,6 +99,7 @@ main {
 }
 
 .bottom {
+  
   bottom: 0;
 }
 
