--- a/src/index.css
+++ b/src/index.css
@@ -64,9 +64,11 @@ main {
 }
 
 .meme--image {
-  width: 100%;
+  max-width: 100%;
+  height: 50dvh;
   border-radius: 3px;
-}
+  margin: 0 auto;
+  display: block;}
 
 .meme--text {
   position: absolute;
